--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ chardet==3.0.4
 click==7.1.2
 cryptography==3.0
 Flask==1.1.2
+Flask-Cors==3.0.8
 Flask-Login==0.5.0
 idna==2.10
 isort==4.3.21
@@ -17,12 +18,14 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 pycodestyle==2.6.0
 pycparser==2.20
+PyJWT==1.7.1
 pylint==2.5.3
 python-dotenv==0.14.0
+pytz==2020.1
 requests==2.24.0
 six==1.15.0
 toml==0.10.1
+twilio==6.44.0
 urllib3==1.25.9
 Werkzeug==1.0.1
 wrapt==1.12.1
-gunicorn==20.0.4
