--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "Admin tools for the Simple Tracer app.",
   "repository": "https://github.com/simple-tracer/hornbill/",
   "logo": "hhttps://avatars0.githubusercontent.com/u/68422085?s=200&v=4",
-  "keywords": ["flask", "simple tracer", "python"]
+  "keywords": ["flask", "simple tracer", "python"],
   "env": {
     "KEY": {
             "description": "This is the key for encrypting user passwords, refer to setup docs for more info.",
